--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,7 @@ body {
 @utility animate-score-enter {
   animation: score-enter 0.6s ease-out both;
 }
+
+@utility touch-action-manipulation {
+  touch-action: manipulation;
+}
